--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       </div>
       <div class="column-2">
         <p>
-          <a href="tel:555-555-5555"><i class="fa fa-phone icon" aria-hidden="true"></i></a>
+          <a href="tel:772-925-9464"><i class="fa fa-phone icon" aria-hidden="true"></i></a>
         </p>
         <p class="section-text">
-          <a href="tel:555-555-5555">(800) 555-1212</a>
+          <a href="tel:772-925-9464">(772) 925-9464</a>
         </p>
       </div>
     </div>
@@ -59,15 +59,10 @@
         Services
       </h2>
       <p class="section-text">
-        serving indian river county
+        We serve Indian River County and all local airports.
       </p>
       <p class="section-text">
-        local  airports anywhere
-      </p>
-      <p class="section-text">
-        delivery service<br/>
-        liquor<br/>
-        restaurants
+        Delivery service for local liquor stores and restaurants.
       </p>
     </div>
 
@@ -76,14 +71,14 @@
         Hours
       </h2>
       <p class="section-text">
-        Open everyday from 8 am
+        Open everyday from 8 am.
       </p>
     </div>
 
   </div>
 
-  <div class="site-by">
+  <!-- <div class="site-by">
       <a class="site-by" href="#">site by<br/><i class="fa fa-star" aria-hidden="true"></i></a>
-  </div>
+  </div> -->
   </body>
 </html>
