--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <p class="section-text">
           <a href="tel:772-925-9464">(772) 925-9464</a>
         </p>
+
       </div>
     </div>
 
@@ -64,6 +65,9 @@
       <p class="section-text">
         Delivery service for local liquor stores and restaurants.
       </p>
+      <p>
+        <img class="icon-brand" src="images/icon-brand.svg" />
+      </p>
     </div>
 
     <div id="item3" class="container hidden" name="hours">
@@ -72,6 +76,9 @@
       </h2>
       <p class="section-text">
         Open everyday from 8 am.
+      </p>
+      <p>
+        <img class="icon-brand" src="images/icon-brand.svg" />
       </p>
     </div>
 
