--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>Vero Cab</title>
+    <title>Vero Cab | Brian Palmer, Owner | (772) 925-9464</title>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Google Fonts -->
@@ -31,11 +31,11 @@
     </div>
 
   <div id="container">
-
     <div id="item1" class="" name="contact">
       <h2 class="section-title">
         Contact
       </h2>
+      <p class="section-text">Brian Palmer, Owner</p>
       <div class="column-2">
         <p>
           <a href="mailto:verocab@comcast.net" subject=""><i class="fa fa-envelope-o icon" aria-hidden="true"></i></a>
@@ -68,6 +68,9 @@
       <p>
         <img class="icon-brand" src="images/icon-brand.svg" />
       </p>
+      <p class="quote-text">
+        <em>&ldquo;Prompt, reliable and courteous service!  Available around town, errands, appointments and to airports. Affordable! Great service with a smile!&rdquo;</em><br/><br/>-Helene
+      </p>
     </div>
 
     <div id="item3" class="container hidden" name="hours">
@@ -80,12 +83,15 @@
       <p>
         <img class="icon-brand" src="images/icon-brand.svg" />
       </p>
+      <p class="quote-text">
+        <em>&ldquo;I book all my travel and appointments with Vero Cab.  Brian is courteous, timely and very helpful.  Thanks for all you do!&rdquo;</em><br/><br/>-Jeannie B
+      </p>
     </div>
 
   </div>
 
-  <!-- <div class="site-by">
-      <a class="site-by" href="#">site by<br/><i class="fa fa-star" aria-hidden="true"></i></a>
-  </div> -->
+  <div class="site-by">
+      <a class="site-by" href="http://jatakastudio.co/">site by<br/>jataka studio</i></a>
+  </div>
   </body>
 </html>
