--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
+    <meta name="description" content="Reliable and courteous transportation service in Vero Beach, Florida">
+    <meta name="keywords" content="Vero Cab, Vero Beach, Indian River County transportation service, Brian Palmer">
     <title>Vero Cab | Brian Palmer, Owner | (772) 925-9464</title>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -38,20 +40,19 @@
       <p class="section-text">Brian Palmer, Owner</p>
       <div class="column-2">
         <p>
-          <a href="mailto:verocab@comcast.net" subject=""><i class="fa fa-envelope-o icon" aria-hidden="true"></i></a>
-        </p>
-        <p class="section-text">
-          <a href="mailto:verocab@comcast.net" subject="">verocab@comcast.net</a>
-        </p>
-      </div>
-      <div class="column-2">
-        <p>
           <a href="tel:772-925-9464"><i class="fa fa-phone icon" aria-hidden="true"></i></a>
         </p>
         <p class="section-text">
           <a href="tel:772-925-9464">(772) 925-9464</a>
         </p>
-
+      </div>
+      <div class="column-2">
+        <p>
+          <a href="mailto:verocab@comcast.net" subject=""><i class="fa fa-envelope-o icon" aria-hidden="true"></i></a>
+        </p>
+        <p class="section-text">
+          <a href="mailto:verocab@comcast.net" subject="">verocab@comcast.net</a>
+        </p>
       </div>
     </div>
 
