--- a/index.html
+++ b/index.html
@@ -3,18 +3,28 @@
   <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <meta name="description" content="Reliable and courteous transportation service in Vero Beach, Florida">
+    <meta name="description" content="Vero Cab provides reliable and courteous transportation service in Vero Beach, Florida">
     <meta name="keywords" content="Vero Cab, Vero Beach, Indian River County transportation service, Brian Palmer">
-    <title>Vero Cab | Brian Palmer, Owner | (772) 925-9464</title>
+    <title>Vero Cab | (772) 925-9464 | Brian Palmer, Owner</title>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Tangerine|Raleway" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://use.fontawesome.com/3046675563.js"></script>
+    <!-- Local CSS -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- Local JS -->
     <script src="js/app.js"></script>
-
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-103947855-1', 'auto');
+      ga('send', 'pageview');
+    </script>
   </head>
   <body id="background" class="">
 
@@ -33,6 +43,7 @@
     </div>
 
   <div id="container">
+
     <div id="item1" class="" name="contact">
       <h2 class="section-title">
         Contact
@@ -92,7 +103,7 @@
   </div>
 
   <div class="site-by">
-      <a class="site-by" href="http://jatakastudio.co/">site by<br/>jataka studio</i></a>
+      <a class="site-by" href="http://jatakastudio.co/">site by<br/>jataka studio</a>
   </div>
   </body>
 </html>
